2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* src/pkl-env.h (pkl_ast_node_iter): New struct.
	(pkl_env_iter_begin): New declaration.
	(pkl_env_iter_next): New declaration.
	(pkl_env_iter_end): New declaration.
	* src/pkl-env.c (pkl_env_iter_begin): New function.
	(pkl_env_iter_next): New function.
	(pkl_env_iter_end): New function.
	(pkl_env_map_decls): Use them to implement this function.

2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* src/pk-cmd.c (cmds): Rename to dot_cmds.
	(pk_cmd_init): Deal with the consequences.

2019-11-14  Jose E. Marchesi  <jemarch@gnu.org>

	* man/Makefile.am: New file.
	* Makefile.am (SUBDIRS): Add the man directory.
	* doc/poke.texi (pokerc): New chapter.
	* configure.ac: Initialize HELP2MAN.

2019-11-14  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-insn.def: peeklu, peekiu, pokelu and pokeiu get two
	arguments, not three.
	* testsuite/poke.pkl/struct-types-endian-1.pk: New test.

2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_ps_op_in): Delete commented out code.

2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Installing Obvious Changes): Fix typo

2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* HACKING (Dejagnu): Fix typo.
	(libtextstyle): Fix typo.

2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* src/pk-repl.c (pk_repl): Remove superfluous tests of the
	variable "line".

2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* src/poke.c (pk_print_version): Update translatable strings.

2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y: Add missing trailing ';' in the try-until syntax
	rule.

2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Exceptions): Document the ranges of exceptions.

2019-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/get-ios-1.pk: New test.
	* testsuite/poke.pkl/get-ios-2.pk: Likewise.
	* testsuite/poke.pkl/set-ios-1.pk: Likewise.